--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "mongoose": "^7.3.0",
     "nodemon": "^2.0.22",
     "yarn": "^1.22.19"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
