--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "4.1",
     "mongoose": "^7.3.0",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "yarn": "^1.22.19"
   },
